# alenkapeck-backend

./: .env.template  pyproject.toml
.github/workflows/: python-tests.yml  test.yml
app/: database.py  main.py
app/cruds/: user.py
app/models/: user.py
app/routers/: users.py
app/schemas/: user.py
migrations/: env.py
migrations/versions/: 5bf995fd0f2d_init.py
services/messenger/: .env.template  .env.test  go.mod  go.sum  main.go
services/messenger/app/: main.go
services/messenger/app/db/: database.go  message_repo.go
services/messenger/app/redis/: pubsub.go
services/messenger/app/ws/: handler.go  manager.go
services/messenger/db/: chat.go  chat_repo.go  message.go
services/messenger/tests/db_test/: chat_repo_test.go  main_test.go  message_repo_test.go  testutils_test.go
services/messenger/ws/: manager.go  types.go  utils.go
services/users/: .env.test  alembic.ini
services/users/app/: database.py
services/users/migrations/: env.py
services/users/tests/: conftest.py  test_create_user.py  test_db.py  test_delete_user.py  test_queries.py  test_update_user.py
tests/: conftest.py  test_db.py
tests/test_users_service/: test_api.py  test_create_user.py  test_db.py  test_delete_user.py  test_queries.py  test_update_user.py
tests/test_users_service/fixtures/: client.py  data_factories.py  db.py
users_service/app/: database.py  main.py
users_service/app/graphql/: schema.py
users_service/app/models/: base.py  user.py
users_service/migrations/: env.py
users_service/migrations/versions/: 695cfb8185fa_add_user_roles.py
(+14 files in other folders)
